# seamless-python-interop

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-and-run.sh  callbacks.py  cythoncallbacks.pyx.in  devcontainer.Dockerfile  generate-bindings.sh.in  invoker.py  main.cpp  nativelib.cpp
.devcontainer/: devcontainer.json
host/: CMakeLists.txt  main.cpp
include/: nativelib.h
